--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    //Integrantes: Flores, Grimaldo, Gutierrez, Hernandez, Jasso.
+    //Materia: Programación Web
+    //Secuencia: 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parfum - Fragancias de Lujo Exclusivas </title>
@@ -792,3 +795,4 @@
     </script>
 </body>
 </html>
+
