--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- 
+ /* Integrantes: Flores, Grimaldo, Gutierrez, Hernandez, Jasso */
+ /* Asignatura: Programacion Web */
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parfum - Fragancias de Lujo Exclusivas </title>
@@ -795,6 +796,7 @@
     </script>
 </body>
 </html>
+
 
 
 
